# analyse

./: .dockerignore  .env  .gitignore  API.yaml  Cargo.toml  Dockerfile  graphql_requests  mongodb-instructions.txt
src/: database_configuration.rs  lib.rs  main.rs
src/controllers/: packages.rs  responses.rs  trucks.rs  warehouses.rs
src/data/: mod.rs  package_models.rs  truck_models.rs  warehouse_models.rs
src/logic/: errors.rs  mod.rs  packages.rs  routes.rs  trucks.rs  warehouses.rs
src/repositories/: database_configuration.rs  database_models.rs  mod.rs  packages.rs  trucks.rs  warehouses.rs
src/routes/: catchers.rs  mod.rs  packages.rs  responses.rs  trucks.rs  warehouses.rs
