[package]
name = "kurztrip_analyse"
version = "0.1.0"
authors = ["Santiago <crvargaso@unal.edu.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
serde = { version="1.0.125", features=["derive"] }
dotenv = "0.15.0"
uuid = {version="0.8.2",features=["serde","v4"]}

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json"]

[dependencies.mongodb]
version = "1.2.0"
default-features = false
features = ["sync"]
